fix: experts styles align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,9 +26,11 @@ main section, aside {
 	box-shadow: 0px 8px 24px 0px rgba(136, 136, 136, 0.25);
 }
 
+
 h1, h2 {
 	color: #333;
 }
+
 
 h2 {
 	font-size: 24px;
@@ -94,6 +96,7 @@ h3 {
 
 .logo__text {
 	margin: 0;
+	color: #5D7285;
 }
 
 .nav_closed {
@@ -219,10 +222,6 @@ h3 {
 	left: 150px;
 }
 
-/* h1 {
-	grid-column: span 3;
-} */
-
 .stats {
 	grid-column: 1/3;
 }
@@ -256,12 +255,16 @@ h3 {
 	box-sizing: border-box;
 }
 
+.experts, .services {
+	padding: 20px;
+}
+
 .experts__wrapper {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(188px, 1fr));
 	margin-top: 20px;
-	gap: 20px;
+	column-gap: 4.5em;
+	row-gap: 2em;
 }
 
 .experts__item {
